Aggiunto il DailyTask e fix generali